--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <!-- no action on form needed since not submitting anywhere-->
       <form id="form" class="form">
-        <h2>Register With Us</h2>
+        <h2>Sign up form</h2>
         <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter username" />
